@@ -26,13 +26,22 @@
     <parent>
         <artifactId>flink-table</artifactId>
         <groupId>org.apache.flink</groupId>
-        <version>1.18-SNAPSHOT</version>
+        <version>1.20-SNAPSHOT</version>
     </parent>
 
     <artifactId>flink-sql-gateway</artifactId>
     <name>Flink : Table : SQL Gateway</name>
 
     <packaging>jar</packaging>
+
+	<properties>
+		<surefire.module.config><!--
+			SqlGatewayTest/CommonTestUtils.setEnv
+			-->--add-opens=java.base/java.util=ALL-UNNAMED <!--
+			OperationManager#getThreadInFuture
+			-->--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+		</surefire.module.config>
+	</properties>
 
     <dependencies>
         <!-- Flink client to submit jobs -->
@@ -107,6 +116,13 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-table-api-java</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-table-common</artifactId>
 			<version>${project.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
